update icons to font-awesome

--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
   <!-- icons & stylesheet -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/logo/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -187,7 +187,7 @@
         <!-- Trauma Surgery -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-blue-100 text-blue-600 mb-4">
-            <i class="fas fa-procedures text-xl"></i>
+            <i class="fa-solid fa-procedures text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Trauma, General Surgery & Laparoscopic Surgery</h3>
           <p class="text-gray-600 text-sm">Advanced surgical care with minimally invasive options for faster recovery.</p>
@@ -196,7 +196,7 @@
         <!-- Obstetrics & Gynecology -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-pink-100 text-pink-600 mb-4">
-            <i class="fas fa-baby text-xl"></i>
+            <i class="fa-solid fa-baby text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Obstetrics & Gynecology</h3>
           <p class="text-gray-600 text-sm">Comprehensive women's health services from prenatal care to delivery.</p>
@@ -205,7 +205,7 @@
         <!-- Internal Medicine -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-green-100 text-green-600 mb-4">
-            <i class="fas fa-stethoscope text-xl"></i>
+            <i class="fa-solid fa-stethoscope text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Internal Medicine</h3>
           <p class="text-gray-600 text-sm">Expert diagnosis and treatment for a wide range of adult health conditions.</p>
@@ -214,7 +214,7 @@
         <!-- Pediatrics -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-yellow-100 text-yellow-600 mb-4">
-            <i class="fas fa-child text-xl"></i>
+            <i class="fa-solid fa-child text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Pediatrics</h3>
           <p class="text-gray-600 text-sm">Comprehensive healthcare for infants, children, and adolescents.</p>
@@ -223,7 +223,7 @@
         <!-- ENT -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-purple-100 text-purple-600 mb-4">
-            <i class="fas fa-deaf text-xl"></i>
+            <i class="fa-solid fa-deaf text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Ear, Nose & Throat (ENT)</h3>
           <p class="text-gray-600 text-sm">Specialized care for hearing, sinus, and throat conditions.</p>
@@ -232,7 +232,7 @@
         <!-- Orthopedics -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-red-100 text-red-600 mb-4">
-            <i class="fas fa-bone text-xl"></i>
+            <i class="fa-solid fa-bone text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Orthopedic Surgery</h3>
           <p class="text-gray-600 text-sm">Treatment for bone, joint, and muscle injuries and conditions.</p>
@@ -241,7 +241,7 @@
         <!-- Cardiology -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-teal-100 text-teal-600 mb-4">
-            <i class="fas fa-heartbeat text-xl"></i>
+            <i class="fa-solid fa-heartbeat text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Cardiology</h3>
           <p class="text-gray-600 text-sm">Comprehensive heart health diagnostics and treatments.</p>
@@ -250,7 +250,7 @@
         <!-- Neurology -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-indigo-100 text-indigo-600 mb-4">
-            <i class="fas fa-brain text-xl"></i>
+            <i class="fa-solid fa-brain text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Neurology</h3>
           <p class="text-gray-600 text-sm">Expert diagnosis and management of brain and nervous system disorders.</p>
@@ -259,7 +259,7 @@
         <!-- Dermatology -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-orange-100 text-orange-600 mb-4">
-            <i class="fas fa-allergies text-xl"></i>
+            <i class="fa-solid fa-allergies text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Dermatology</h3>
           <p class="text-gray-600 text-sm">Care for skin conditions, cosmetic treatments, and skin cancer screening.</p>
@@ -268,7 +268,7 @@
         <!-- Radiology -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 mb-4">
-            <i class="fas fa-x-ray text-xl"></i>
+            <i class="fa-solid fa-x-ray text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Radiology</h3>
           <p class="text-gray-600 text-sm">Advanced imaging services including X-ray, ultrasound, and CT scan.</p>
@@ -277,7 +277,7 @@
         <!-- Mammography -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-pink-200 text-pink-700 mb-4">
-            <i class="fas fa-ribbon text-xl"></i>
+            <i class="fa-solid fa-ribbon text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Mammography</h3>
           <p class="text-gray-600 text-sm">The only mammography service in Ilocos Sur for early breast cancer detection.</p>
@@ -286,7 +286,7 @@
         <!-- Pharmacy -->
         <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
           <div class="w-12 h-12 flex items-center justify-center rounded-full bg-lime-100 text-lime-600 mb-4">
-            <i class="fas fa-pills text-xl"></i>
+            <i class="fa-solid fa-pills text-xl"></i>
           </div>
           <h3 class="font-semibold text-lg text-gray-800 mb-2">Pharmacy</h3>
           <p class="text-gray-600 text-sm">A complete range of prescription medicines and healthcare products.</p>
@@ -528,10 +528,10 @@
         <div class="flex flex-col items-center py-6 text-center">
           <h1 class="text-2xl font-bold uppercase tracking-wide">METRO VIGAN HOSPITAL</h1>
           <p class="text-sm mt-1 leading-5">
-              &#x1F4CD; Rizal St., Brgy. IV (Poblacion), Bantay, Ilocos Sur<br>
-              &#128222; (077) 674-0674<br>
-              &#128233; info@metroviganhospital.com<br>
-              &#127760; www.metroviganhospital.com
+              <i class="fa-solid fa-map"></i> Rizal St., Brgy. IV (Poblacion), Bantay, Ilocos Sur<br>
+              <i class="fa-solid fa-phone"></i> (077) 674-0674<br>
+              <i class="fa-solid fa-at"></i> info@metroviganhospital.com<br>
+              <i class="fa-solid fa-globe"></i> www.metroviganhospital.com
           </p>
         </div>
           <!-- Yellow Accent -->
@@ -603,21 +603,25 @@
           <img src="img/logo/mvh_logo_optimized.avif" loading="lazy" fetchpriority="low" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
-          <p class="mt-4 text-gray-600 text-sm leading-relaxed">Entrust your health to us!</p>
-          <p class="text-gray-600 text-sm leading-relaxed">We Care, We Cure, We Can.</p>
+        <p class="mt-4 text-gray-600 text-sm leading-relaxed">
+          Entrust your health to us!
+        </p>
+        <p class="text-gray-600 text-sm leading-relaxed">
+          We Care, We Cure, We Can.
+        </p>
       </div>
 
       <!-- Quick Links -->
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a href="/services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="/facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
-          <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
+          <li><a href="/services" class="hover:text-[#04813b] transition">Our Services</a></li>
+          <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
+          <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
-          <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>          
+          <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
       </div>
 
@@ -626,9 +630,7 @@
         <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
         <ul class="space-y-3 text-gray-600 text-sm">
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.62.47 2.32 0L21 8M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z" />
-            </svg>
+            <i class="fa-solid fa-envelope text-green-700"></i>
             <span>
               <a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">
                 info@metroviganhospital.com
@@ -637,9 +639,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
-            </svg>
+            <i class="fa-solid fa-phone text-green-700"></i>
             <span>
               <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
                 (077) 674 0587
@@ -648,16 +648,14 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 11 7 11s7-5.75 7-11c0-3.87-3.13-7-7-7z" />
-              <circle cx="12" cy="9" r="2" stroke-width="2" />
-            </svg>
+            <i class="fa-solid fa-map-pin text-green-700"></i>
             <span>
               <a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" target="_blank" class="hover:underline hover:underline-offset-2">
                 Rizal St., Brgy. IV (Poblacion), Bantay, Philippines
               </a>
             </span>
           </li>
+
         </ul>
       </div>
 
@@ -666,16 +664,12 @@
         <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
         <div class="flex space-x-4">
           <!-- Facebook -->
-          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-green-600 transition" aria-label="Facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M22 12c0-5.522-4.478-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54v-2.891h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.891h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
-            </svg>
+          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-[#04813b] transition" aria-label="Facebook">
+            <i class="fa-brands fa-facebook text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
           <!-- Instagram -->
-          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-green-600 transition" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.75-.88a1.13 1.13 0 1 1-2.25 0 1.13 1.13 0 0 1 2.25 0z"/>
-            </svg>
+          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-[#04813b] transition" aria-label="Instagram">
+            <i class="fa-brands fa-instagram text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
         </div>
       </div>
@@ -688,8 +682,8 @@
         <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="img/logo/xtianbar-logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="/privacy-policy" class="hover:text-green-600 transition">Privacy Policy</a>
-          <a href="/terms-of-service" class="hover:text-green-600 transition">Terms of Service</a>
+          <a href="/privacy-policy" class="hover:text-[#04813b] transition">Privacy Policy</a>
+          <a href="/terms-of-service" class="hover:text-[#04813b] transition">Terms of Service</a>
         </div>
       </div>
     </div>
