--- a/contact-us.html
+++ b/contact-us.html
@@ -33,7 +33,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 
   <!-- Schema.org Markup -->
   <script type="application/ld+json">
@@ -154,7 +154,7 @@
                         <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
                         <div class="relative">
                             <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                            <i class="fas fa-user"></i>
+                            <i class="fa-solid fa-user"></i>
                             </span>
                             <input type="text" id="name" name="name" required placeholder="Juan Dela Cruz"
                                 class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
@@ -169,7 +169,7 @@
                             <label for="phone" class="block text-sm font-medium text-gray-700">Cellphone Number</label>
                             <div class="relative">
                             <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                                <i class="fas fa-phone"></i>
+                                <i class="fa-solid fa-mobile-screen"></i>
                             </span>
                             <input type="tel" id="phone" name="phone"
                                     pattern="^(09|\+639)\d{9}$" maxlength="15"
@@ -185,9 +185,9 @@
                             <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
                             <div class="relative">
                             <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                                <i class="fas fa-envelope"></i>
+                                <i class="fa-solid fa-envelope"></i>
                             </span>
-                            <input type="email" id="email" name="email" required placeholder="name@email.com"
+                            <input type="email" id="email" name="email" required placeholder="example@email.com"
                                     class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                         <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
                         <div class="relative">
                             <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                            <i class="fas fa-location-dot"></i>
+                            <i class="fa-solid fa-location-dot"></i>
                             </span>
                             <input type="text" id="address" name="address" required placeholder="Rizal St., Brgy. IV (Poblacion), Bantay, Philippines"
                                 class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
@@ -238,7 +238,7 @@
                         <!-- Address -->
                         <div class="flex items-start mb-6">
                             <div class="w-8 h-8 flex-shrink-0 flex items-center justify-center bg-green-600 rounded-full mr-4">
-                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fa-solid fa-map-pin"></i>
                             </div>
                             <div>
                                 <h4 class="font-semibold">Our Location</h4>
@@ -248,7 +248,7 @@
                         <!-- Email -->
                         <div class="flex items-start mb-6">
                             <div class="w-8 h-8 flex-shrink-0 flex items-center justify-center bg-green-600 rounded-full mr-4">
-                                <i class="fas fa-envelope"></i>
+                                <i class="fa-solid fa-envelope"></i>
                             </div>
                             <div>
                                 <h4 class="font-semibold">Email Us</h4>
@@ -260,7 +260,7 @@
                         <!-- Phone -->
                         <div class="flex items-start mb-6">
                            <div class="w-8 h-8 flex-shrink-0 flex items-center justify-center bg-green-600 rounded-full mr-4">
-                                <i class="fas fa-phone"></i>
+                                <i class="fa-solid fa-phone"></i>
                             </div>
                             <div>
                                 <h4 class="font-semibold">Call Us</h4>
@@ -274,7 +274,7 @@
                         <!-- Emergency Room -->
                         <div class="flex items-start mb-6">
                            <div class="w-8 h-8 flex-shrink-0 flex items-center justify-center bg-red-500 rounded-full mr-4">
-                                <i class="fas fa-star-of-life"></i>
+                                <i class="fa-solid fa-star-of-life"></i>
                             </div>
                             <div>
                                 <h4 class="font-semibold">Emergency Room (24/7)</h4>
@@ -284,7 +284,7 @@
                         <!-- Ambulance -->
                         <div class="flex items-start mb-6">
                            <div class="w-8 h-8 flex-shrink-0 flex items-center justify-center bg-blue-500 rounded-full mr-4">
-                                <i class="fas fa-ambulance"></i>
+                                <i class="fa-solid fa-ambulance"></i>
                             </div>
                             <div>
                                 <h4 class="font-semibold">Ambulance Services</h4>
@@ -294,7 +294,7 @@
                         <!-- Visiting Hours -->
                         <div class="flex items-start mb-6">
                            <div class="w-8 h-8 flex-shrink-0 flex items-center justify-center bg-green-600 rounded-full mr-4">
-                                <i class="fas fa-clock"></i>
+                                <i class="fa-solid fa-clock"></i>
                             </div>
                             <div>
                                 <h4 class="font-semibold">Visiting Hours</h4>
@@ -317,11 +317,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Business Office</h3>
                     <div class="flex items-center text-gray-600 mb-3">
-                        <i class="fas fa-phone w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-phone w-5 mr-3 text-green-600"></i>
                         <span>(077) 674-0587</span>
                     </div>
                     <div class="flex items-center text-gray-600">
-                        <i class="fas fa-envelope w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-envelope w-5 mr-3 text-green-600"></i>
                         <span>billing@metroviganhospital.com</span>
                     </div>
                 </div>
@@ -329,11 +329,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Laboratory</h3>
                     <div class="flex items-center text-gray-600 mb-3">
-                        <i class="fas fa-phone w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-phone w-5 mr-3 text-green-600"></i>
                         <span>(077) 674-0587</span>
                     </div>
                     <div class="flex items-center text-gray-600">
-                        <i class="fas fa-envelope w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-envelope w-5 mr-3 text-green-600"></i>
                         <span>laboratory@metroviganhospital.com</span>
                     </div>
                 </div>
@@ -341,11 +341,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Pharmacy</h3>
                     <div class="flex items-center text-gray-600 mb-3">
-                        <i class="fas fa-phone w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-phone w-5 mr-3 text-green-600"></i>
                         <span>(077) 674-0587</span>
                     </div>
                     <div class="flex items-center text-gray-600">
-                        <i class="fas fa-envelope w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-envelope w-5 mr-3 text-green-600"></i>
                         <span>pharmacy@metroviganhospital.com</span>
                     </div>
                 </div>
@@ -353,11 +353,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Human Resources</h3>
                     <div class="flex items-center text-gray-600 mb-3">
-                        <i class="fas fa-phone w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-phone w-5 mr-3 text-green-600"></i>
                         <span>(077) 674-0587</span>
                     </div>
                     <div class="flex items-center text-gray-600">
-                        <i class="fas fa-envelope w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-envelope w-5 mr-3 text-green-600"></i>
                         <span>humanresource@metroviganhospital.com</span>
                     </div>
                 </div>
@@ -365,11 +365,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Information</h3>
                     <div class="flex items-center text-gray-600 mb-3">
-                        <i class="fas fa-phone w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-phone w-5 mr-3 text-green-600"></i>
                         <span>(077) 674-0587</span>
                     </div>
                     <div class="flex items-center text-gray-600">
-                        <i class="fas fa-envelope w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-envelope w-5 mr-3 text-green-600"></i>
                         <span>info@metroviganhospital.com</span>
                     </div>
                 </div>
@@ -377,11 +377,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Marketing Department</h3>
                     <div class="flex items-center text-gray-600 mb-3">
-                        <i class="fas fa-phone w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-phone w-5 mr-3 text-green-600"></i>
                         <span>(077) 674-0587</span>
                     </div>
                     <div class="flex items-center text-gray-600">
-                        <i class="fas fa-envelope w-5 mr-3 text-green-600"></i>
+                        <i class="fa-solid fa-envelope w-5 mr-3 text-green-600"></i>
                         <span>marketing@metroviganhospital.com</span>
                     </div>
                 </div>
@@ -417,26 +417,26 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="img/logo/mvh_logo_optimized.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="img/logo/mvh_logo_optimized.avif" loading="lazy" fetchpriority="low" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
-          <p class="mt-4 text-gray-600 text-sm leading-relaxed">
-            Entrust your health to us!
-          </p>
-          <p class="text-gray-600 text-sm leading-relaxed">
-            We Care, We Cure, We Can.
-          </p>
+        <p class="mt-4 text-gray-600 text-sm leading-relaxed">
+          Entrust your health to us!
+        </p>
+        <p class="text-gray-600 text-sm leading-relaxed">
+          We Care, We Cure, We Can.
+        </p>
       </div>
 
       <!-- Quick Links -->
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a href="/services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="/facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
-          <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
+          <li><a href="/services" class="hover:text-[#04813b] transition">Our Services</a></li>
+          <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
+          <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
           <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
@@ -447,9 +447,7 @@
         <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
         <ul class="space-y-3 text-gray-600 text-sm">
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.62.47 2.32 0L21 8M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z" />
-            </svg>
+            <i class="fa-solid fa-envelope text-green-700"></i>
             <span>
               <a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">
                 info@metroviganhospital.com
@@ -458,9 +456,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
-            </svg>
+            <i class="fa-solid fa-phone text-green-700"></i>
             <span>
               <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
                 (077) 674 0587
@@ -469,10 +465,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 11 7 11s7-5.75 7-11c0-3.87-3.13-7-7-7z" />
-              <circle cx="12" cy="9" r="2" stroke-width="2" />
-            </svg>
+            <i class="fa-solid fa-map-pin text-green-700"></i>
             <span>
               <a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" target="_blank" class="hover:underline hover:underline-offset-2">
                 Rizal St., Brgy. IV (Poblacion), Bantay, Philippines
@@ -488,16 +481,12 @@
         <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
         <div class="flex space-x-4">
           <!-- Facebook -->
-          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-green-600 transition" aria-label="Facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M22 12c0-5.522-4.478-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54v-2.891h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.891h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
-            </svg>
+          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-[#04813b] transition" aria-label="Facebook">
+            <i class="fa-brands fa-facebook text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
           <!-- Instagram -->
-          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-green-600 transition" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.75-.88a1.13 1.13 0 1 1-2.25 0 1.13 1.13 0 0 1 2.25 0z"/>
-            </svg>
+          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-[#04813b] transition" aria-label="Instagram">
+            <i class="fa-brands fa-instagram text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
         </div>
       </div>
@@ -510,8 +499,8 @@
         <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="img/logo/xtianbar-logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="/privacy-policy" class="hover:text-green-600 transition">Privacy Policy</a>
-          <a href="/terms-of-service" class="hover:text-green-600 transition">Terms of Service</a>
+          <a href="/privacy-policy" class="hover:text-[#04813b] transition">Privacy Policy</a>
+          <a href="/terms-of-service" class="hover:text-[#04813b] transition">Terms of Service</a>
         </div>
       </div>
     </div>
