--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/logo/favicon.ico" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.google.com/recaptcha/api.js?render=6LdVjZ8rAAAAAMTpN-pXZT9SoR2JHcmCUFNDwv2W"></script>
   
@@ -221,7 +222,7 @@
 
       <!-- Buttons -->
       <div class="flex flex-col justify-center xl:justify-start md:flex-row gap-4 mt-6 items-center lg:items-start">
-        <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
+        <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
         <a href="/services" aria-label="services" class="block w-[14rem] text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Services Offered</a>
       </div>
 
@@ -794,7 +795,7 @@
             <p class="text-gray-600 text-sm mb-4">
               Metro Vigan Hospital is honored to receive the prestigious Diamond Status Award from the World Stroke Organization, recognizing our commitment to excellence in stroke patient care.
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -806,7 +807,7 @@
             <p class="text-gray-600 text-sm mb-4">
               Metro Vigan Hospital Celebrates 25 Years with Rhythm, Movement, and Community Spirit!
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -818,7 +819,7 @@
             <p class="text-gray-600 text-sm mb-4">
               Metro Vigan Hospital turns 25 — and we’re celebrating by giving back. Honored to spend a joyful day with the inspiring kids of STAC-VIGAN!
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -830,7 +831,7 @@
             <p class="text-gray-600 text-sm mb-4">
               In celebration of its 25th anniversary, Metro Vigan Hospital visited Balay Taripato in Magsingal, Ilocos Sur, for a meaningful gift-giving program, sharing joy and compassion for the elderly.
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -842,7 +843,7 @@
             <p class="text-gray-600 text-sm mb-4">
               In celebration of World Blood Donor Day, Metro Vigan Hospital champions the spirit of giving by hosting a blood donation drive—because every drop counts, and every donor gives hope.
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -854,7 +855,7 @@
             <p class="text-gray-600 text-sm mb-4">
               Rooted in Service: Metro Vigan Hospital Honors 25 Years with Tree Planting in Paing, Bantay, Ilocos Sur.
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -866,7 +867,7 @@
             <p class="text-gray-600 text-sm mb-4">
               From hospital halls to playing fields—MVH celebrates 25 years with teamwork, energy, and fun!
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -878,7 +879,7 @@
             <p class="text-gray-600 text-sm mb-4">
               Metro Vigan Hospital received its Safe Hospital Plaque of Excellence from Private Hospital Association of the Philippines (PHAPI) for Safe Hospital Awards Level 2—Grand Prize.
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -890,7 +891,7 @@
             <p class="text-gray-600 text-sm mb-4">
               In line with its 25th anniversary, Metro Vigan Hospital held a free Operation Tuli, ensuring quality healthcare and surgical services for the children of the community.
             </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -1113,80 +1114,75 @@
               <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
               <div class="relative">
                 <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                  <i class="fas fa-user"></i>
+                <i class="fa-solid fa-user"></i>
                 </span>
-                <input type="text" id="name" name="name" required 
-                      class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+                <input type="text" id="name" name="name" required placeholder="Juan Dela Cruz" class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
               </div>
             </div>
 
             <!-- Phone + Address: 2 Columns -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-              
+                        
               <!-- Phone -->
               <div class="relative ">
                 <label for="phone" class="block text-sm font-medium text-gray-700">Cellphone Number</label>
                 <div class="relative">
                   <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                    <i class="fas fa-phone"></i>
+                    <i class="fa-solid fa-mobile-screen"></i>
                   </span>
-                  <input type="tel" id="phone" name="phone"
-                        pattern="^(09|\+639)\d{9}$" maxlength="15"
-                        placeholder="09 or +639"
-                        title="Enter a valid PH number: starts with 09 or +639"
-                        required
-                        class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
-                </div>
-              </div>
-
-              <!-- Email Address -->
-              <div class="relative md:col-span-2 flex flex-col">
-                <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                <div class="relative">
-                  <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                    <i class="fas fa-envelope"></i>
-                  </span>
-                  <input type="email" id="email" name="email" required
-                        class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
-                </div>
+                  <input type="tel" id="phone" name="phone" pattern="^(09|\+639)\d{9}$" maxlength="15" placeholder="09 or +639" title="Enter a valid PH number: starts with 09 or +639"
+                  required class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
               </div>
             </div>
 
-            <!-- Address -->
-            <div class="relative">
-              <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
-              <div class="relative">
-                <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
-                  <i class="fas fa-location-dot"></i>
-                </span>
-                <input type="text" id="address" name="address" required 
-                      class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
-              </div>
-            </div>
+                        <!-- Email Address -->
+                        <div class="relative md:col-span-2 flex flex-col">
+                            <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                            <div class="relative">
+                            <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+                                <i class="fa-solid fa-envelope"></i>
+                            </span>
+                            <input type="email" id="email" name="email" required placeholder="example@email.com"
+                                    class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+                            </div>
+                        </div>
+                        </div>
 
-            <!-- Message -->
-            <div class="relative">
-              <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-              <textarea id="message" name="message" rows="4" required 
-                class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500"></textarea>
-            </div>
+                        <!-- Address -->
+                        <div class="relative">
+                        <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
+                        <div class="relative">
+                            <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+                            <i class="fa-solid fa-location-dot"></i>
+                            </span>
+                            <input type="text" id="address" name="address" required placeholder="Rizal St., Brgy. IV (Poblacion), Bantay, Philippines"
+                                class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+                        </div>
+                        </div>
 
-            <!-- Submit Button + Thank You Message -->
-            <div class="flex flex-col sm:flex-row sm:items-center sm:gap-4">
-              <button type="submit" 
-                      class="hover:bg-[#16a94c] text-white font-medium py-2 px-4 rounded-md bg-[#04813b] transition">
-                Send Message
-              </button>
+                        <!-- Message -->
+                        <div class="relative">
+                          <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
+                          <textarea id="message" name="message" rows="4" required placeholder="Enter your message here..."
+                              class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500"></textarea>
+                        </div>
 
-                <!-- Thank You + Animated Checkmark -->
-                <div id="thank-you-wrapper" class="flex items-center gap-2 hidden text-green-600 font-medium mt-2 sm:mt-0 transition duration-300">
-                  <!-- SVG checkmark -->
-                  <svg id="check-icon" class="w-6 h-6 text-green-500 scale-75 opacity-0 transition-transform duration-500 ease-out" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
-                  </svg>
-                  <span id="thank-you-message">Thank you! Message sent.</span>
-                </div>
-            </div>
+                        <!-- Submit Button + Thank You Message -->
+                        <div class="flex flex-col sm:flex-row sm:items-center sm:gap-4">
+                        <button type="submit" 
+                                class="hover:bg-[#16a94c] text-white font-medium py-2 px-4 rounded-md bg-[#04813b] transition">
+                            Send Message
+                        </button>
+
+                            <!-- Thank You + Animated Checkmark -->
+                            <div id="thank-you-wrapper" class="flex items-center gap-2 hidden text-green-600 font-medium mt-2 sm:mt-0 transition duration-300">
+                            <!-- SVG checkmark -->
+                            <svg id="check-icon" class="w-6 h-6 text-green-500 scale-75 opacity-0 transition-transform duration-500 ease-out" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span id="thank-you-message">Thank you! Message sent.</span>
+                            </div>
+                        </div>
           </form>
         </div>
 
@@ -1231,9 +1227,7 @@
         <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
         <ul class="space-y-3 text-gray-600 text-sm">
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#04813b]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.62.47 2.32 0L21 8M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z" />
-            </svg>
+            <i class="fa-solid fa-envelope text-green-700"></i>
             <span>
               <a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">
                 info@metroviganhospital.com
@@ -1242,9 +1236,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#04813b]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
-            </svg>
+            <i class="fa-solid fa-phone text-green-700"></i>
             <span>
               <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
                 (077) 674 0587
@@ -1253,10 +1245,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#04813b]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 11 7 11s7-5.75 7-11c0-3.87-3.13-7-7-7z" />
-              <circle cx="12" cy="9" r="2" stroke-width="2" />
-            </svg>
+            <i class="fa-solid fa-map-pin text-green-700"></i>
             <span>
               <a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" target="_blank" class="hover:underline hover:underline-offset-2">
                 Rizal St., Brgy. IV (Poblacion), Bantay, Philippines
@@ -1273,15 +1262,11 @@
         <div class="flex space-x-4">
           <!-- Facebook -->
           <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-[#04813b] transition" aria-label="Facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-[#04813b] transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M22 12c0-5.522-4.478-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54v-2.891h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.891h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
-            </svg>
+            <i class="fa-brands fa-facebook text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
           <!-- Instagram -->
           <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-[#04813b] transition" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-[#04813b] transition" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.75-.88a1.13 1.13 0 1 1-2.25 0 1.13 1.13 0 0 1 2.25 0z"/>
-          </svg>
+            <i class="fa-brands fa-instagram text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
         </div>
       </div>
