--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
   <!-- icons & stylesheet -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/logo/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -382,7 +382,7 @@
   <section class="py-12 bg-gray-50 bg-white mb-10">
     <div class="max-w-6xl mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold text-green-800 mb-8">
-        <i class="fa-solid fa-id-card-clip text-green-600 mr-2"></i> We Are PhilHealth Konsulta Accredited
+        <i class="fa-solid fa-hospital text-green-600 mr-2"></i> We Are PhilHealth Konsulta Accredited
       </h2>
       <p class="text-gray-700 max-w-3xl mx-auto mb-10">
         As a PhilHealth Konsulta accredited healthcare provider, we ensure that our patients can access essential
@@ -411,7 +411,7 @@
 
       <!-- Note -->
       <p class="mt-8 text-md text-gray-500">
-        *We partner with a wide range of accredited HMOs. To see our full list of providers, click <a href="/about-us#hmo" class="text-gray-500 hover:text-green-500 hover:underline hover:underline-offset-2">learn more→</a>.
+        *We partner with a wide range of accredited HMOs. To see our full list of providers, click <a href="/about-us#hmo" class="text-gray-500 hover:text-green-500 hover:underline hover:underline-offset-2">learn more <i class="fa-solid fa-arrow-right"></i></a>.
       </p>
     </div>
   </section>
@@ -438,11 +438,11 @@
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a href="/services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="/facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
-          <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
+          <li><a href="/services" class="hover:text-[#04813b] transition">Our Services</a></li>
+          <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
+          <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
           <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
@@ -453,9 +453,7 @@
         <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
         <ul class="space-y-3 text-gray-600 text-sm">
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.62.47 2.32 0L21 8M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z" />
-            </svg>
+            <i class="fa-solid fa-envelope text-green-700"></i>
             <span>
               <a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">
                 info@metroviganhospital.com
@@ -464,9 +462,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
-            </svg>
+            <i class="fa-solid fa-phone text-green-700"></i>
             <span>
               <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
                 (077) 674 0587
@@ -475,10 +471,7 @@
           </li>
 
           <li class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 11 7 11s7-5.75 7-11c0-3.87-3.13-7-7-7z" />
-              <circle cx="12" cy="9" r="2" stroke-width="2" />
-            </svg>
+            <i class="fa-solid fa-map-pin text-green-700"></i>
             <span>
               <a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" target="_blank" class="hover:underline hover:underline-offset-2">
                 Rizal St., Brgy. IV (Poblacion), Bantay, Philippines
@@ -494,16 +487,12 @@
         <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
         <div class="flex space-x-4">
           <!-- Facebook -->
-          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-green-600 transition" aria-label="Facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M22 12c0-5.522-4.478-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54v-2.891h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.891h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
-            </svg>
+          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-[#04813b] transition" aria-label="Facebook">
+            <i class="fa-brands fa-facebook text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
           <!-- Instagram -->
-          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-green-600 transition" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.75-.88a1.13 1.13 0 1 1-2.25 0 1.13 1.13 0 0 1 2.25 0z"/>
-            </svg>
+          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-[#04813b] transition" aria-label="Instagram">
+            <i class="fa-brands fa-instagram text-gray-600 hover:text-[#04813b] transition text-2xl"></i>
           </a>
         </div>
       </div>
@@ -516,8 +505,8 @@
         <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="img/logo/xtianbar-logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="/privacy-policy" class="hover:text-green-600 transition">Privacy Policy</a>
-          <a href="/terms-of-service" class="hover:text-green-600 transition">Terms of Service</a>
+          <a href="/privacy-policy" class="hover:text-[#04813b] transition">Privacy Policy</a>
+          <a href="/terms-of-service" class="hover:text-[#04813b] transition">Terms of Service</a>
         </div>
       </div>
     </div>
