--- a/contact-us.html
+++ b/contact-us.html
@@ -109,7 +109,7 @@
       <!-- Navbar Menu -->
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
-          <li><a href="/" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="/" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="/services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
