--- a/doctors.html
+++ b/doctors.html
@@ -156,14 +156,14 @@
     <img src="img/hero/doctors_hero.avif" alt="Metro Vigan Hospital Doctors" class="absolute inset-0 w-full h-full object-cover">
     
     <!-- Dark Overlay -->
-    <div class="absolute inset-0 bg-black bg-opacity-20"></div>
+    <div class="absolute inset-0 bg-gradient-to-b from-black/10 to-black/30"></div>
     
     <!-- Top Text Content -->
     <div class="relative text-center text-white px-8 max-w-4xl mx-auto mt-20">
-      <h3 class="flex flex-wrap text-center gap-4 justify-center text-4xl md:text-6xl font-bold mb-6">
+      <h3 class="flex text-gray-800 flex-wrap text-center gap-4 justify-center text-4xl md:text-6xl font-bold mb-6">
         <span>Meet Our </span><span class="underline underline-offset-[1rem] decoration-green-500">Medical Experts</span>
       </h3>
-      <p class="text-lg md:text-xl text-gray-200">
+      <p class="text-lg md:text-xl text-gray-700">
         A trusted team of specialists delivering expert care, advanced treatments, 
       and a personal touch for every patient.
       </p>
